--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "git://github.com/astorise/ember-adresse-data-gouv-fr.git",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
